--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.19",
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.19",
+    "@mantine/ds": "^6.0.19",
+    "@mantine/hooks": "^6.0.19",
+    "@mantine/prism": "^6.0.19",
+    "@tabler/icons-react": "^2.32.0",
+    "next": "^13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
