--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "^2.32.0",
     "next": "^13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9"
   }
 }
