--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@formspark/use-formspark": "^0.1.39",
     "@mantine/core": "^6.0.19",
     "@mantine/ds": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
